<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rowMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/overlayCardVwVw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/form_overlay_sheet"
        android:elevation="@dimen/_12sdp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_18sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_20sdp">

        <View
            android:layout_width="@dimen/_34sdp"
            android:layout_height="@dimen/_4sdp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/form_sheet_grabber" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/figtree_bold"
            android:letterSpacing="-0.01"
            android:id="@+id/guideTitleTvVw"
            android:text="@string/txt_allow_overlay_access"
            android:textColor="@color/on_surface"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:lineSpacingMultiplier="1.3"
            android:id="@+id/guideDescTvVw"
            android:text="@string/overlay_guide_desc"
            android:textColor="@color/on_surface_variant"
            android:textSize="@dimen/_10ssp" />

        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:background="@drawable/form_overlay_row"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_10sdp">

            <ImageView
                android:id="@+id/guideRowIconIvVw"
                android:layout_width="@dimen/_38sdp"
                android:layout_height="@dimen/_38sdp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/figtree_semibold"
                    android:maxLines="1"
                    android:id="@+id/guideRowNameTvVw"
                    android:text="@string/app_name_overlay"
                    android:textColor="@color/on_surface"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:id="@+id/guideRowHintTvVw"
                    android:text="@string/overlay_guide_row_hint"
                    android:textColor="@color/on_surface_variant"
                    android:textSize="@dimen/_9ssp" />
            </LinearLayout>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_viewVw"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:importantForAccessibility="no"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/toggleonoff" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/overlay_guide_dismiss"
            android:textColor="@color/on_surface_variant"
            android:textSize="@dimen/_9ssp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
